Version 0.0.1
First Release

Version 0.0.2
Added [SBM] Wooden Shears
Added Alchemistry
Added Biomes O'Plenty
Added Carry on 
Added Chicken Drop Feathers
Added Chest Hoppers
Added Compressium - Forge
Added Create
Added Discord Intergrationntergration
Added Dungeon Crawl
Added Edible Sugar
Added Edit Sign
Added Energetic Sheep
Added Fast Furnaces
Added Iron Shulker Boxes
Added Nouse Tweaks
Added Silents's Mechanisms
Added Solar Generation
Added Tample Stopper
Added Tool Belt
Added Tubes Reloaded
Added Upgrade Aquatic
Added Vanila Plus: Easy Steel & More [FORGE]
Added Vanila Plus:Powder Power  [FORGE] 
Added Vanila Plus: The Veggie Way [FORGE]
Added Wyrmroost

Removed Mini coal due to pickled tweaks has mini coal and charcoal
Removed Ultimate Car Mod due to too many conflicts
Removed QuantumStorage Due to breaking with the new forge update to 28.1.X

Updated to forge 28.1.31
Updated Apotheosis
Updated Caelus API
Updated Campfire Torches
Updated Colytra
Updated ComPatchedStorage
Updated Container
Updated Controlling
Updated Corail Tombstone
Updated Crafting Station
Updated Cyclic
Updated Cyclops Core
Updated DefaultSettings
Updated Donk Storage
Updated Enchantments Exchanger
Updated Essentials
Updated EverlastingAbilities
Updated Extended Caves
Updated Fast Workbench
Updated Forbidden and Arcanus
Updated FTB Utilities: Backup
Updated Gobber [FORGE]
Updated Iron Chest
Updated Just enough Items (JEI)
Updated Large Fluid Tank
Updated Lycabites Mobs
Updated McJtyLib
Updated OresAllEasy
Updated Overloaded
Updated Placebo
Updated Quick Homes
Updated RandomPatches
Updated RFTools Base
Updated RFTools Power
Updated Ring of Attraction [FORGE]
Updated Ring of Blink [FORGE]
Updated Ring of Growth [FORGE]
Updated Ring of Repair [FORGE]
Updated Ring of Teleport [FORGE]
Updated Ring of the Enderchest [FORGE]
Updated Ring of the Miner [FORGE]
Updated Silent Gear
Updated Silent Gems
Updated Silent Lib
Updated Simple Farming
Updated Simple Storage Network
Updated Simply Light