@@ -45,6 +45,7 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/250832">OpenBlocks Elevator (by vsngarcia)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/291493">Portality (by Buuz135)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/246939">Water Strainer (by Ruuubi)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/298744">Structurize (by H3lay)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/298187">Building Gadgets (by Direwolf20)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/326041">RFTools Base (by McJty)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/326599">Ceiling Torch (by bl4ckscor3)</a></li>
@@ -110,6 +111,7 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/326258">Silent's Mechanisms (by SilentChaos512)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/232131">Default Options (by BlayTheNinth)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/314569">YAMDA - Yet Another Mining Dimension Attempt (by Sunekaer)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/245506">Minecolonies (by H3lay)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/284497">Iron Jetpacks (by BlakeBr0)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/285612">RandomPatches (by TheRandomLabs)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/251079">A Block of Charcoal (by Turkey2349)</a></li>
@@ -138,7 +140,7 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/226670">Light Level Overlay Reloaded (by oldjunyi)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/270684">Vanilla Plus: The Veggie Way [FORGE] (by kwpugh)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/310237">Chest Hoppers (by SimplySimon0)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/281274">Uppers (by vadis365)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/332518">Ring of Repair [FORGE] (by kwpugh)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/281274">Uppers (by vadis365)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/326957">Tubes Reloaded (by Commoble)</a></li>
 </ul>
