@@ -469,6 +469,24 @@ general {
     #  [range: 0 ~ 50, default: 1]
     I:"lycanitesmobs:zoataur"=1
 
+    #  [range: 0 ~ 50, default: 1]
+    I:"minecolonies:archerbarbarian"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"minecolonies:archerpirate"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"minecolonies:barbarian"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"minecolonies:chiefbarbarian"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"minecolonies:chiefpirate"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"minecolonies:pirate"=1
+
     #  [range: 0 ~ 50, default: 8]
     I:"minecraft:blaze"=8
 
