@@ -1,0 +1,269 @@
+
+#All configuration items related to the core gameplay
+[gameplay]
+	#Amount of initial citizens. [Default: 4]
+	#Range: 1 ~ 10
+	initialcitizenamount = 4
+	#Should builder place construction tape? [Default: true]
+	builderplaceconstructiontape = true
+	#Should player get one guidebook on first join to a new world? [Default: true]
+	playergetsguidebookonfirstjoin = true
+	#Should players be able to place an infinite amount of supplychests? [Default: false]
+	allowinfinitesupplychests = false
+	#Should players be allowed to abandon their colony to create a new one easily? [Default: false]
+	allowinfinitecolonies = false
+	#Should colonies in other dimensions be allowed? [Default: false]
+	allowotherdimcolonies = false
+	#Average citizen respawn interval (in seconds). [Default: 60]
+	#Range: 10 ~ 600
+	citizenrespawninterval = 60
+	#Max citizens in one colony. [Default: 50]
+	#Range: 4 ~ 500
+	maxcitizenpercolony = 50
+	#Should builder and miner build without resources? (this also turns off what they produce). [Default: false]
+	builderinfiniteresources = false
+	#Should there be at max 1 warehouse per colony?. [Default: true]
+	limittoonewarehousepercolony = true
+	#Delay after each block placement (Increasing it, increases the delay) [Default: 15]
+	#Range: 1 ~ 500
+	builderbuildblockdelay = 15
+	#Delay modifier to mine a block (Decreasing it, decreases the delay) [Default: 500]
+	#Range: 1 ~ 10000
+	blockminingdelaymodifier = 500
+	#Amount of blocks the builder checks (to decrease lag by builder). [Default: 1000]
+	#Range: 1000 ~ 100000
+	maxblockscheckedbybuilder = 1000
+	#Chat frequency of worker requests. [Default: 30]
+	#Range: 1 ~ 100
+	chatfrequency = 30
+	#Should in development features be enabled (might be buggy). [Default: false]
+	enableindevelopmentfeatures = false
+	#Should citizen name tags be rendered? [Default: true]
+	alwaysrendernametag = true
+	#Child growth modifier, default on avg they take about 60min to grow (at 1.0x modifier). Setting to 5 = 5x as fast. [Default: 1]
+	#Range: 1.0 ~ 100.0
+	growthmodifier = 1.0
+	#Should workers work during the rain? [Default: false]
+	workersalwaysworkinrain = false
+	#Should Players be sent entering/leaving colony notifications? [Default: true]
+	sendenteringleavingmessages = true
+	#Should player made schematics be allowed [Default: false]
+	allowplayerschematics = false
+	#Should players be allowed to change names? -1 for false, 0 for specific groups, 1 for true. [Default: 1]
+	#Range: -1 ~ 1
+	allowglobalnamechanges = 1
+	#Should special holiday content be displayed? [Default: true]
+	holidayfeatures = true
+	#AI Update rate, increase to improve performance. [Default: 1]
+	#Range: 0 ~ 100
+	updaterate = 1
+	#Quantity of dirt per Compost filling. [Default: 1]
+	#Range: 0 ~ 100
+	dirtfromcompost = 1
+	#Chance to get a lucky block in percent. [Default: 1]
+	#Range: 0 ~ 100
+	luckyblockchance = 1
+	#Automatically fix orphaned chunks which were caused by chunk loading and saving issues. [Default: false]
+	fixorphanedchunks = false
+	#If the builder should be slower underground or as fast as anywhere else. [Default: true]
+	restrictbuilderunderground = true
+	#Chance to get a sponge drop for the fisherman starting at level 4. [Default: 0.1]
+	#Range: 0.0 ~ 100.0
+	fisherspongechance = 0.1
+	#The minimum level a townhall has to have to allow teleportation to other colonies. [Default: 3]
+	#Range: 0 ~ 5
+	minthleveltoteleport = 3
+	#Suggest build tool usage when trying to place a building without build tool. [Default: true]
+	suggestbuildtoolplacement = true
+	#Food consumption modifier (Min: 1.0). [Default: 1.0]
+	#Range: 0.0 ~ 100.0
+	foodmodifier = 1.0
+	#Disable citizen voices. [Default: false]
+	disablecitizenvoices = false
+
+#All configurations related to the Minecolonies commands
+[commands]
+	#Time until a next teleport can be executed (in seconds). [Default: 120]
+	#Range: 30 ~ 99999
+	teleportbuffer = 120
+	#Which level counts as op level on the server. [Default: 3]
+	#Range: 0 ~ 3
+	oplevelforserver = 3
+	#Sets the amount of hours until a colony will be deleted after not seeing it's mayor, set to zero to disable. [Default: 0]
+	#Range: 168 ~ 10000
+	autodeletecoloniesinhours = 0
+	#Sets weither or not Colony structures are destroyed automatically. [Default: true]
+	autodestroycolonyblocks = true
+	#Should the player be allowed to use the '/mc rtp' command? [Default: true]
+	canplayerusertpcommand = true
+	#Should the player be allowed to use the '/mc colony teleport' command? [Default: false]
+	canplayerusecolonytpcommand = false
+	#Should the player be allowed to use the '/mc home' command? [Default: true]
+	canplayerusehometpcommand = true
+	#Should the player be allowed to use the '/mc citizens info' command? [Default: true]
+	canplayerusecitizeninfocommand = true
+	#Should the player be allowed to use the '/mc citizens list' command? [Default: true]
+	canplayeruselistcitizenscommand = true
+	#Should the player be allowed to use the '/mc citizens respawn' command? [Default: true]
+	canplayerrespawncitizenscommand = true
+	#Should the player be allowed to use the '/mc colony info' command? [Default: true]
+	canplayeruseshowcolonyinfocommand = true
+	#Should the player be allowed to use the '/mc citizens kill' command? [Default: true]
+	canplayerusekillcitizenscommand = true
+	#Should the player be allowed to use the '/mc colony addOfficer' command? [Default: true]
+	canplayeruseaddofficercommand = true
+	#Should the player be allowed to use the '/mc colony delete' command? [Default: true]
+	canplayerusedeletecolonycommand = true
+	#Should the player be allowed to use the '/mc colony refresh' command? [Default: false]
+	canplayeruserefreshcolonycommand = false
+	#Should the player be allowed to use the '/mc backup' command? [Default: false]
+	canplayerusebackupcommand = false
+	#minecolonies.config.numberofattemptsforsafetp.comment
+	#Range: 1 ~ 10
+	numberofattemptsforsafetp = 4
+
+#minecolonies.config.claims.comment
+[claims]
+	#Colony size (radius in chunks around central colony chunk). Only for the static mode. [Default: 8]
+	#Range: 1 ~ 50
+	workingrangetownhallchunks = 8
+	#The minimum distances between town halls for dynamic colony sizes (used as default initial claim too). [Default: 3]
+	#Range: 1 ~ 200
+	mintownhallpadding = 3
+	#minecolonies.config.townhallpadding.comment
+	#Range: 1 ~ 20000
+	townhallpadding = 20
+	#Padding between colonies in chunks. [Default: 1]
+	#Range: 1 ~ 200
+	townhallpaddingchunk = 1
+	#Should the min/max distance from spawn also affect colony placement? [Default: false]
+	restrictcolonyplacement = false
+	#Should the colony have a fixed radius or should it be dynamic. [Default: false]
+	enabledynamiccolonysizes = false
+	#Max distance from world spawn. [Default: 8000]
+	#Range: 1000 ~ 100000
+	maxdistancefromworldspawn = 8000
+	#Min distance from world spawn. [Default: 512]
+	#Range: 1 ~ 1000
+	mindistancefromworldspawn = 512
+	#Should players be allowed to build their colonies over existing villages? [Default: false]
+	protectvillages = false
+
+#All configuration items related to the combat elements of Minecolonies
+[combat]
+	#Whether or not to spawn barbarians. [Default: true]
+	dobarbariansspawn = true
+	#minecolonies.config.barbarianhordedifficulty.comment
+	#Range: 0 ~ 10
+	barbarianhordedifficulty = 5
+	#The spawn size of a barbarian horde. [Default: 5]
+	#Range: 1 ~ 10
+	spawnbarbariansize = 5
+	#The max size of a barbarian horde. [Default: 20]
+	#Range: 6 ~ 40
+	maxBarbarianSize = 20
+	#Whether or not to barbarians can break, scale, bridge obstacles. [Default: true]
+	dobarbariansbreakthroughwalls = true
+	#The average amount of nights between raids. [Default: 3]
+	#Range: 1 ~ 10
+	averagenumberofnightsbetweenraids = 3
+	#The minimum number of nights between raids. [Default: 1]
+	#Range: 1 ~ 30
+	minimumnumberofnightsbetweenraids = 1
+	#Should Mobs attack citizens? [Default: false
+	mobattackcitizens = false
+	#minecolonies.config.citizencallforhelp.comment
+	citizencallforhelp = true
+	#Should Guard Rangers benefit from Power/Smite/Bane of Arthropods enchants? [Default: true]
+	rangerenchants = true
+	#Damage multiplier for Ranger Guards. [Default: 1.0]
+	#Range: 0.1 ~ 5.0
+	rangerdamagemult = 1.0
+	#Damage multiplier for Knight Guards. [Default: 1.0]
+	#Range: 0.1 ~ 5.0
+	knightdamagemult = 1.0
+	#Health multiplier for all Guards. [Default: 1.0]
+	#Range: 0.1 ~ 5.0
+	guardhealthmult = 1.0
+	#Turn on Minecolonies pvp mode, attention (colonies can be destroyed and can be griefed under certain conditions). [Default: false]
+	pvp_mode = false
+	#Days until the pirate ships despawn again. [Default: 3]
+	#Range: 1 ~ 10
+	daysuntilpirateshipsdespawn = 3
+	#Max Y level for Barbarians to spawn. [Default: 200]
+	#Range: 1 ~ 500
+	maxyforbarbarians = 200
+
+#All permission configuration options
+[permissions]
+	#Should the colony protection be enabled? [Default: true]
+	enablecolonyprotection = true
+	#Independent from the colony protection, should explosions be turned off? [Default: true]
+	turnoffexplosionsincolonies = true
+	#minecolonies.config.specialpermgroup.comment
+	specialpermgroup = ["_Raycoms_"]
+	#Blocks players should be able to final ForgeConfigSpec.IntValueeract with in any colony (Ex vending machines)
+	freetointeractblocks = ["dirt", "0 0 0"]
+	#Seconds between permission messages. [Default: 30]
+	#Range: 1 ~ 1000
+	secondsBetweenPermissionMessages = 30
+
+#All configuration related to mod compatibility
+[compatibility]
+	#minecolonies.config.extraores.comment
+	extraOres = ["minestuck:ore_cruxite", "minestuck:ore_uranium"]
+	#minecolonies.config.guardresourcelocations.comment
+	guardresourcelocations = ["minecraft:slime", "tconstruct:blueslime"]
+	#minecolonies.config.configliststudyitems.comment
+	configliststudyitems = ["minecraft:paper;400;100"]
+	#minecolonies.config.listofcompostableitems.comment
+	listOfCompostableItems = ["minecraft:rotten_flesh", "minecraft:tallgrass", "minecraft:brown_mushroom", "minecraft:red_mushroom", "minecraft:rose_bush", "minecraft:feather", "saplings", "small_flowers"]
+	#minecolonies.config.luckyblocks.comment
+	luckyblocks = ["minecraft:coal_ore!64", "minecraft:iron_ore!32", "minecraft:gold_ore!16", "minecraft:redstone_ore!8", "minecraft:lapis_ore!4", "minecraft:diamond_ore!2", "minecraft:emerald_ore!1"]
+	#minecolonies.config.crusherproduction.comment
+	crusherproduction = ["minecraft:cobblestone!minecraft:gravel", "minecraft:gravel!minecraft:sand", "minecraft:sand!minecraft:clay"]
+	#minecolonies.config.siftermeshes.comment
+	siftermeshes = ["minecraft:string,0", "minecraft:flint,0.1", "minecraft:iron_ingot,0.1", "minecraft:diamond,0.1"]
+	#minecolonies.config.siftableblocks.comment
+	siftableblocks = ["minecraft:dirt", "minecraft:sand", "minecraft:gravel", "minecraft:soul_sand"]
+	#minecolonies.config.sifterdrops.comment
+	sifterdrops = ["0,0,minecraft:wheat_seeds,25", "0,0,minecraft:oak_sapling,1", "0,0,minecraft:birch_sapling,1", "0,0,minecraft:spruce_sapling,1", "0,0,minecraft:jungle_sapling,1", "0,1,minecraft:wheat_seeds,50", "0,1,minecraft:oak_sapling,5", "0,1,minecraft:birch_sapling,5", "0,1,minecraft:spruce_sapling,5", "0,1,minecraft:jungle_sapling,5", "0,1,minecraft:carrot:0,1", "0,1,minecraft:potato:0,1", "0,2,minecraft:wheat_seeds,50", "0,2,minecraft:oak_sapling,10", "0,2,minecraft:birch_sapling,10", "0,2,minecraft:spruce_sapling,10", "0,2,minecraft:jungle_sapling,10", "0,2,minecraft:pumpkin_seeds:0,1", "0,2,minecraft:melon_seeds:0,1", "0,2,minecraft:beetroot_seeds:0,1", "0,2,minecraft:carrot,1", "0,2,minecraft:potato,1", "0,2,minecraft:dark_oak_sapling,1", "0,2,minecraft:acacia_sapling,1", "0,3,minecraft:wheat_seeds,25", "0,3,minecraft:oak_sapling,10", "0,3,minecraft:birch_sapling,10", "0,3,minecraft:spruce_sapling,10", "0,3,minecraft:jungle_sapling,10", "0,3,minecraft:pumpkin_seeds:0,5", "0,3,minecraft:melon_seeds:0,5", "0,3,minecraft:beetroot_seeds:0,5", "0,3,minecraft:carrot:0,5", "0,3,minecraft:potato:0,5", "0,3,minecraft:dark_oak_sapling,5", "0,3,minecraft:acacia_sapling,5", "1,0,minecraft:cactus,2.5", "1,0,minecraft:sugar_cane,2.5", "1,1,minecraft:cactus,5", "1,1,minecraft:sugar_cane,5", "1,1,minecraft:gold_nugget,5", "1,2,minecraft:cactus,10", "1,2,minecraft:sugar_cane,10", "1,2,minecraft:cocoa_beans,10", "1,2,minecraft:gold_nugget,10", "1,3,minecraft:cactus,15", "1,3,minecraft:sugar_cane,15", "1,3,minecraft:cocoa_beans,15", "1,3,minecraft:gold_nugget,15", "2,0,minecraft:iron_nugget,5", "2,0,minecraft:flint,5", "2,0,minecraft:coal,5", "2,1,minecraft:redstone,10", "2,1,minecraft:iron_nugget,10", "2,1,minecraft:flint,10", "2,1,minecraft:coal,10", "2,2,minecraft:redstone,15", "2,2,minecraft:iron_nugget,15", "2,2,minecraft:coal,15", "2,2,minecraft:lapis_lazuli,5", "2,2,minecraft:iron_ingot,1", "2,2,minecraft:gold_ingot,1", "2,2,minecraft:emerald,1", "2,2,minecraft:diamond,1", "2,3,minecraft:redstone,20", "2,3,minecraft:coal,20", "2,3,minecraft:lapis_lazuli,10", "2,3,minecraft:iron_ingot,2.5", "2,3,minecraft:gold_ingot,2.5", "2,3,minecraft:emerald,2.5", "2,3,minecraft:diamond,2.5", "3,0,minecraft:nether_wart,5", "3,0,minecraft:quartz,5", "3,1,minecraft:nether_wart,10", "3,1,minecraft:quartz,10", "3,1,minecraft:glowstone_dust,5", "3,2,minecraft:nether_wart,10", "3,2,minecraft:quartz,10", "3,2,minecraft:glowstone_dust,10", "3,2,minecraft:blaze_powder,1", "3,2,minecraft:magma_cream,1", "3,3,minecraft:nether_wart,15", "3,3,minecraft:quartz,15", "3,3,minecraft:glowstone_dust,15", "3,3,minecraft:blaze_powder,5", "3,3,minecraft:magma_cream,5", "3,3,minecraft:player_head,5"]
+	#Harvest trunk-size for dynamic trees:1-8. [Default: 5]
+	#Range: 1 ~ 5
+	dynamictreeharvestsize = 5
+
+#All configurations related to pathfinding
+[pathfinding]
+	#Draw pathfinding paths (might be laggy). [Default: false]
+	pathfindingdebugdraw = false
+	#Verbosity of pathfinding. [Default: 0]
+	#Range: 0 ~ 10
+	pathfindingdebugverbosity = 0
+	#Amount of additional threads to be used for pathfinding. [Default: 2]
+	#Range: 1 ~ 10
+	pathfindingmaxthreadcount = 2
+	#Max amount of Nodes(positions) to map during pathfinding. Lowering increases performance, but might lead to pathing glitches. [Default: 5000]
+	#Range: 1 ~ 10000
+	pathfindingmaxnodes = 5000
+
+#minecolonies.config.requestsystem.comment
+[requestSystem]
+	#Should the request system prfinal ForgeConfigSpec.IntValue out debug information? Useful in case of malfunctioning of set system. [Default: false]
+	enabledebuglogging = false
+	#The maximal amount of tries that the request system will perform for retryable requests. Higher increases server load. [Default: 3]
+	#Range: 1 ~ 10
+	maximalretries = 3
+	#The amount of ticks between retries of the request system for retryable requests. Lower increases server load. [Default: 1200]
+	#Range: 30 ~ 10000
+	delaybetweenretries = 1200
+	#The maximal amount of buildings the Delivery Man should try to gather before attempting a drop off at the warehouse. [Default: 6]
+	#Range: 1 ~ 50
+	maximalbuildingstogather = 6
+	#The minimal amount of buildings the Delivery Man should try to gather before attempting a drop off at the warehouse. [Default: 3]
+	#Range: 1 ~ 50
+	minimalbuildingstogather = 3
+	#Should the request system creatively resolve (if possible) when the player is required to resolve a request. [Default: false]
+	creativeresolve = false
+	#Should the player be allowed to use the '/mc colony rs reset' command? [Default: false]
+	canplayeruseresetcommand = false
+
