@@ -1,0 +1,20 @@
+
+#All configuration items related to the core gameplay
+[gameplay]
+	#Should the default schematics be ignored (from the jar)?
+	ignoreSchematicsFromJar = false
+	#Should player made schematics be allowed
+	allowPlayerSchematics = true
+	#Max world operations per tick (Max blocks to place, remove or replace)
+	#Range: 0 ~ 100000
+	maxOperationsPerTick = 1000
+	#Max amount of changes cached to be able to undo
+	#Range: 0 ~ 100
+	maxCachedChanges = 10
+	#Max amount of schematics to be cached on the server
+	#Range: 0 ~ 100000
+	maxCachedSchematics = 100
+	#Max amount of blocks checked by a possible worker
+	#Range: 0 ~ 100000
+	maxBlocksChecked = 1000
+
