@@ -17,9 +17,11 @@ Added Edit Sign
 Added Energetic Sheep
 Added Fast Furnaces
 Added Iron Shulker Boxes
+Added Minecolonies
 Added Nouse Tweaks
 Added Silents's Mechanisms
 Added Solar Generation
+Added Structureize
 Added Tample Stopper
 Added Tool Belt
 Added Tubes Reloaded
